--- a/src/app/components/movie-card/movie-card.component.css
+++ b/src/app/components/movie-card/movie-card.component.css
@@ -1,14 +1,38 @@
 .movie-card {
   width: 180px; /* set the width of the card to 300px */
-}
-
-.movie-header {
-  width: 100%; /* set the width of the image container to 100% */
-  overflow: hidden; /* hide any overflow */
+  display: flex;
+  flex-direction: column;
 }
 
 .movie-header img {
   width: 100%; /* set the width of the image to 100% */
-  object-fit: cover; /* ensure the image covers the entire container while maintaining its aspect ratio */
-  border-radius: 5px; /* round the top corners of the image */
+  border-radius: 7px; /* round the top corners of the image */
 }
+
+.movie-rating {
+  border: 3px solid green;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: -23px;
+  margin-left: 20px;
+  background-color: black;
+}
+
+.movie-rating h4 {
+  color: white;
+}
+
+.movie-content {
+  margin-top: 5px;
+}
+
+.movie-content h4 {
+  margin: 0;
+  padding: 0;
+}
+
+
