--- a/src/app/components/movie-card/movie-card.component.html
+++ b/src/app/components/movie-card/movie-card.component.html
@@ -2,23 +2,11 @@
   <div class="movie-header">
     <img src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}" alt="movie poster"/>
   </div>
+  <div class="movie-rating">
+    <h4>{{movie.vote_average | number:'1.1-1'}}</h4>
+  </div>
   <div class="movie-content">
-    <div class="movie-content-header">
-      <h3 class="movie-title">{{movie.original_title}}</h3>
-    </div>
-    <div class="movie-info">
-      <div class="info-section">
-        <label>Rating</label>
-        <span>{{movie.vote_average}}</span>
-      </div>
-      <div class="info-section">
-        <label>Genre</label>
-        <span>{{movie.genre_ids}}</span>
-      </div>
-      <div class="info-section">
-        <label>Release Date</label>
-        <span>{{movie.release_date}}</span>
-      </div>
-    </div>
+    <h4>{{movie.original_title}}</h4>
+    <span>{{movie.release_date | date}}</span>
   </div>
 </div>
