--- a/src/app/components/movie-home-page/movie-home-page.component.html
+++ b/src/app/components/movie-home-page/movie-home-page.component.html
@@ -1,5 +1,5 @@
 <div class="banner">
-  <img src="assets/images/banner.jpg" alt="banner" />
+  <img src="assets/images/banner.jpg" alt="banner"/>
 </div>
 <div class="trending-movies">
   <div class="trending-selector">
@@ -7,5 +7,7 @@
     <button [class.green-background]="showTrendingMoviesDay">Today</button>
     <button [class.green-background]="!showTrendingMoviesDay">This Week</button>
   </div>
-  <app-movie-list [movies]="trendingMovies" [title]="'Trending Movies'"></app-movie-list>
+  <div class="trending-movies">
+    <app-movie-list [movies]="trendingMovies" [title]="'Trending Movies'"></app-movie-list>
+  </div>
 </div>
