add trailer model and adjust html for new trailer model template;

--- a/src/app/components/movie-home-page/movie-home-page.component.css
+++ b/src/app/components/movie-home-page/movie-home-page.component.css
@@ -28,7 +28,7 @@
   color: white;
 }
 
-.trending-movies {
+.trending-movie-list {
   background-image: url("../../../assets/images/trending.svg");
   background-repeat: no-repeat;
   background-position: bottom;
