add new components, html and css;

--- a/src/app/components/movie-home-page/movie-home-page.component.css
+++ b/src/app/components/movie-home-page/movie-home-page.component.css
@@ -34,3 +34,9 @@
   background-position: bottom;
 }
 
+.upcoming-movies {
+  background-image: url("../../../assets/images/trailer-background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
