add new html class;

--- a/src/app/components/movie-trailer-card/movie-trailer-card.component.html
+++ b/src/app/components/movie-trailer-card/movie-trailer-card.component.html
@@ -1,6 +1,6 @@
 <div class="trailer-card">
   <div class="trailer-header">
-    <img src="https://i.ytimg.com/vi/{{movie.trailer}}/hqdefault.jpg" alt="movie poster"/>
+    <img class="trailer-poster" src="https://i.ytimg.com/vi/{{movie.trailer}}/hqdefault.jpg" alt="movie poster"/>
   </div>
   <div class="trailer-content">
     <h3>{{movie.original_title}}</h3>
