added unfinished trailer feature

--- a/src/app/components/movie-trailer-card/movie-trailer-card.component.html
+++ b/src/app/components/movie-trailer-card/movie-trailer-card.component.html
@@ -4,7 +4,8 @@
   </div>
   <div class="trailer-content">
     <h3>{{movie.original_title}}</h3>
-    <a class="trailer-action" href="https://www.youtube.com/watch?v={{movie.trailer}}"></a>
+    <a class="trailer-action" href="https://www.youtube.com/watch?v={{movie.trailer}}">
+      <img src="assets/images/play.png" alt="play"></a>
   </div>
 </div>
 
