--- a/src/app/components/movie-card/movie-card.component.css
+++ b/src/app/components/movie-card/movie-card.component.css
@@ -1,5 +1,5 @@
 .movie-card {
-  width: 180px; /* set the width of the card to 300px */
+  /* width: 180px; set the width of the card to 300px */
   display: flex;
   flex-direction: column;
 }
@@ -12,6 +12,55 @@
 .movie-header img {
   width: 100%; /* set the width of the image to 100% */
   border-radius: 7px; /* round the top corners of the image */
+}
+
+.movie-rating {
+  border: 3px solid green;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  font-size: 0.8em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: -23px;
+  margin-left: 20px;
+  background-color: black;
+}
+
+.movie-rating h4 {
+  color: white;
+}
+
+.movie-content {
+  margin-top: 5px;
+}
+
+.movie-content h4, span {
+  margin: 0;
+  padding: 0;
+  font-size: 0.8em;
+}
+
+
+
+
+
+
+/* .movie-card {
+  width: 180px; 
+  display: flex;
+  flex-direction: column;
+}
+
+.movie-card:hover {
+  transform: scale(1.05);
+  transition: transform 0.5s ease;
+}
+
+.movie-header img {
+  width: 100%;
+  border-radius: 7px; 
 }
 
 .movie-rating {
@@ -38,6 +87,7 @@
 .movie-content h4 {
   margin: 0;
   padding: 0;
-}
+} */
+
 
 
