--- a/src/app/components/movie-home-page/movie-home-page.component.css
+++ b/src/app/components/movie-home-page/movie-home-page.component.css
@@ -1,7 +1,6 @@
 .banner img {
   width: 100%;
-  height: 500px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .trending-selector {
@@ -12,13 +11,17 @@
   margin-left: 0.6rem;
 }
 
+.trending-selector h2{
+  font-size: 1.4em;
+}
+
 .trending-selector button {
   border: 1px solid black;
   border-radius: 15px;
-  height: 25px;
-  width: 8rem;
+  height: 23px;
+  width: 5rem;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 12px;
   margin-left: 1rem;
   margin-right: -5px;
 }
@@ -38,5 +41,22 @@
   background-image: url("../../../assets/images/trailer-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+@media screen and (min-width: 900px) {
+  .banner img {
+    height: 500px;
+    object-fit: cover;
+  }
+
+  .trending-selector h2{
+    font-size: 2.1em;
+  }
+  
+  .trending-selector button {
+    height: 25px;
+    width: 8rem;
+    font-size: 14px;
+  }
 }
 
