--- a/src/app/components/movie-trailer-card/movie-trailer-card.component.css
+++ b/src/app/components/movie-trailer-card/movie-trailer-card.component.css
@@ -1,15 +1,34 @@
+.trailer-card img{
+  width: 100%;
+}
+
 .trailer-header img {
   border-radius: 7px; /* round the top corners of the image */
   border: 1px solid white;
 }
 
-.trailer-content h3 {
+.trailer-content {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
   color: white;
+  font-size: 2.5vw;
+  padding: 0 5px;
 }
 
 .trailer-action img {
-  width: 80px;
+  width: 40px;
   background: transparent
+}
+
+@media screen and (min-width: 850px) {
+  .trailer-content {
+    font-size: 1.5vw;
+  }
+}
+
+@media screen and (min-width: 1150px) {
+  .trailer-content {
+    font-size: 1vw;
+  }
 }
