--- a/src/app/components/movie-trailer-list/movie-trailer-list.component.html
+++ b/src/app/components/movie-trailer-list/movie-trailer-list.component.html
@@ -1,5 +1,7 @@
 <div class="trailer-list">
   <div class="trailer-card" *ngFor="let movie of movies">
-    <app-movie-trailer-card [movie]="movie"></app-movie-trailer-card>
+    <div *ngIf="movie.trailer">
+      <app-movie-trailer-card [movie]="movie"></app-movie-trailer-card>
+    </div>
   </div>
 </div>
