fix trends movies-list background image not repeating over whole width;

--- a/src/app/components/movie-home-page/movie-home-page.component.css
+++ b/src/app/components/movie-home-page/movie-home-page.component.css
@@ -30,7 +30,7 @@
 
 .trending-movie-list {
   background-image: url("../../../assets/images/trending.svg");
-  background-repeat: no-repeat;
+  background-repeat: repeat-x;
   background-position: bottom;
 }
 
