--- a/src/app/components/movie-trailer-card/movie-trailer-card.component.css
+++ b/src/app/components/movie-trailer-card/movie-trailer-card.component.css
@@ -27,8 +27,15 @@
   right: 58%;
 }
 
+.trailer-action:hover {
+  transform: scale(1.1);
+  transition: transform 0.5s ease;
+}
+
 .trailer-action img {
   width: 80px;
   background: transparent;
   filter: brightness(0) invert(1)
 }
+
+
