refactored package structure

--- a/src/app/components/movie-trailer-list/movie-trailer-card/movie-trailer-card.component.html
+++ b/src/app/components/movie-trailer-list/movie-trailer-card/movie-trailer-card.component.html
@@ -2,7 +2,7 @@
   <div class="trailer-header">
     <img class="trailer-poster" src="https://i.ytimg.com/vi/{{movie.trailer}}/hqdefault.jpg" alt="movie poster"/>
     <a class="trailer-action" href="https://www.youtube.com/watch?v={{movie.trailer}}">
-      <img src="assets/images/play.png" alt="play"></a>
+      <img src="../../../../assets/images/play.png" alt="play"></a>
   </div>
   <div class="trailer-content">
     <h3>{{movie.original_title}}</h3>
